# microservice_template

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitignore  Makefile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml
{{cookiecutter.project_slug}}/docker/: Dockerfile.local  docker-compose.yml
{{cookiecutter.project_slug}}/src/: __init__.py
{{cookiecutter.project_slug}}/src/application/: __init__.py
{{cookiecutter.project_slug}}/src/application/dto/: __init__.py
{{cookiecutter.project_slug}}/src/config/: base.py
{{cookiecutter.project_slug}}/src/config/utils/: logger.py
{{cookiecutter.project_slug}}/src/domain/value_objects/: __init__.py
