[project]
name = "{{cookiecutter.project_slug}}"
version = "{{cookiecutter.project_version}}"
{% if cookiecutter.author_name %}authors = [
    {name = "{{cookiecutter.author_name}}", email = "{{cookiecutter.author_email}}"}
]
{% endif %}
dependencies = [
  "pydantic",
  "pydantic-settings",
  "fastapi",
  "uvicorn[standard],
]

[dependency-groups]
dev = [
    "coverage>=7.13.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra -v --cov --cov-report=term-missing"